--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                 <option value="banner">Banner</option>
                 <option value="standard">Standard</option>
                 <option value="doh">Doh</option>
+                <option value="larry3d">Larry 3D</option>
             </select>
             
             <input type="submit" value="Submit">
