--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,11 @@
             
             <label for="font_select">Choose a Font:</label>
             <select id="font_select" name="font_select">
-                {% for font in fonts %}
-                <option value="{{ font }}">{{ font }}</option>
-                {% endfor %}
+                <option value="block">Block</option>
+                <option value="banner">Banner</option>
+                <option value="standard">Standard</option>
+                <option value="doh">Doh</option>
+                <option value="larry3d">Larry 3D</option>
             </select>
             
             <input type="submit" value="Submit">
